# win-thread-manage

./: Cargo.toml  makefile
examples/: hook_test.rs  thread_test.rs
src/: lib.rs  run.rs
src/dll_helper/: dll.rs  mod.rs
static_lib/: Cargo.toml
static_lib/src/: lib.rs
thread_helper/: Cargo.toml
thread_helper/src/: lib.rs
thread_helper/src/alloc/: cache.rs  mod.rs
thread_helper/src/dll_helper/: dll.rs  mod.rs  peb_lookup.rs  thread.rs  windef.rs
thread_helper/src/hook/: mod.rs
thread_helper/src/thread/: capture_stack.rs  mod.rs  module.rs  simple_stack.rs  stack.rs
