[package]
name = "static_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["minwindef", "winbase", "basetsd","libloaderapi"] }
minhook = "0.5.0"
thread_helper = {path = "../thread_helper"}

[lib]
crate-type = ["staticlib"]