[package]
name = "thread_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obfstr = {git = "https://github.com/CasualX/obfstr"}
windows = {version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"] }
ntapi = { version = "0.4", features = ["impl-default"] }
winapi = {version = "0.3.9", features = ["minwindef", "winbase", "basetsd","libloaderapi"] }
windows-result = "0.2.0"
minhook = "0.5.0"
once_cell = "1.20.2"
lazy_static = "1.5.0"